--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,12 @@
 <body>
     <h1>Welcome to Qatskills!</h1>
     <p>A blog about quantum arithmetic and algorithms.</p>
+
+    <h2>Blog Posts</h2>
     <ul>
-        <li><a href="/post/welcome">First Blog Post</a></li>
+        {% for post in posts %}
+            <li><a href="/post/{{ post }}">{{ post }}</a></li>
+        {% endfor %}
     </ul>
 </body>
 </html>
